# 3DGS-Particle-Filter

./: .gitignore  .gitmodules  README.md  config_loader.py  main.py  pyproject.toml  start_renderer.sh  start_visualization_frontend.sh  turtlebot_localization.yaml
core/: __init__.py  config_loader.py  main.py
core/config/: __init__.py  loader.py  models.py  sections.py
core/particle_filter/: __init__.py
core/particle_filter/application/: __init__.py  command_handler.py  diagnostics.py  localization_service.py  runtime_state.py  snapshot_builder.py  step_engine.py
core/rendering/: __init__.py  api.py  config.py  contracts.py  export_lpips_onnx.py  lpips.py  scene.py  scoring.py  types.py
core/replay_tuning/: README.md  __init__.py  evaluator.py  genetic_search.py  models.py  offline_eval.py  paths.py  random_search.py  record_replay_dataset.py  search_common.py
frontend/: __init__.py  app.jsx  controls-panel.jsx  index.html  map-view.jsx  panels.jsx  server.py  snapshot_store.py
frontend_new/: Particle Filter Console.html  controls-panel.jsx  map-view.jsx  panels.jsx  sim.jsx
particle_filter/application/: __init__.py  localization_service.py
particle_filter/domain/: __init__.py  estimator.py  measurement_update.py  motion_model.py  odometry.py  particle.py  particle_filter.py  pose.py  resampler.py
splat_renderer/: Dockerfile  config.py  renderer_core.py  requirements.txt  scoring.py  server.py
visualization_frontend/: __init__.py  reset_command_store.py  server.py
visualization_frontend/web/: app.js  index.html  styles.css
(+50 files in other folders)
